--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
     "@nomiclabs/hardhat-etherscan": "3.0.3",
+    "@openzeppelin/contracts": "^4.7.3",
     "@openzeppelin/contracts-upgradeable": "^4.1.0",
     "@primitivefi/hardhat-dodoc": "^0.1.3",
     "@typechain/ethers-v5": "^9.0.0",
@@ -66,6 +67,7 @@
     "hardhat-deploy": "^0.10.4",
     "hardhat-gas-reporter": "^1.0.7",
     "hardhat-interface-generator": "^0.0.6",
+    "hardhat-tracer": "^1.1.0-rc.9",
     "mocha": "^9.2.0",
     "prettier": "^2.5.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
@@ -76,5 +78,9 @@
     "ts-node": "^10.4.0",
     "typechain": "^7.0.0",
     "typescript": "^4.5.5"
+  },
+  "devDependencies": {
+    "@nomiclabs/hardhat-vyper": "^3.0.1",
+    "@openzeppelin/hardhat-upgrades": "^1.20.0"
   }
 }
