--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nomiclabs/hardhat-etherscan": "3.0.3",
     "@openzeppelin/contracts-upgradeable": "^4.1.0",
     "@primitivefi/hardhat-dodoc": "^0.1.3",
+    "@superfluid-finance/ethereum-contracts": "^1.4.0",
     "@typechain/ethers-v5": "^9.0.0",
     "@typechain/hardhat": "^4.0.0",
     "@types/chai": "^4.3.0",
@@ -60,7 +61,7 @@
     "ethers": "^5.5.4",
     "fs-extra": "^10.0.0",
     "ganache-cli": "^6.12.2",
-    "hardhat": "^2.8.3",
+    "hardhat": "^2.11.2",
     "hardhat-abi-exporter": "^2.8.0",
     "hardhat-contract-sizer": "^2.5.1",
     "hardhat-deploy": "^0.10.4",
