--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "typescript": "^4.5.5"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-vyper": "^3.0.1",
-    "@openzeppelin/hardhat-upgrades": "^1.20.0"
+    "@nomiclabs/hardhat-ganache": "^2.0.1",
+    "@nomiclabs/hardhat-vyper": "^3.0.1"
   }
 }
