--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ ETH_NODE_URI=https://{{networkName}}.infura.io/v3/<apiKey>
 MNEMONIC_MAINNET=<mnemonic for mainnet>
 # generic mnemonic (if no specific found):
 MNEMONIC=<mnemonic>
+
+# Default network to fork when using hardhat
+HARDHAT_FORK=goerli
