--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
   },
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
-    "@nomiclabs/hardhat-etherscan": "3.0.3",
+    "@nomiclabs/hardhat-etherscan": "3.1.0",
     "@openzeppelin/contracts": "^4.7.3",
-    "@openzeppelin/contracts-upgradeable": "^4.1.0",
+    "@openzeppelin/contracts-upgradeable": "^4.7.3",
     "@primitivefi/hardhat-dodoc": "^0.1.3",
     "@superfluid-finance/ethereum-contracts": "^1.4.0",
     "@typechain/ethers-v5": "^9.0.0",
@@ -82,6 +82,12 @@
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ganache": "^2.0.1",
-    "@nomiclabs/hardhat-vyper": "^3.0.1"
+    "@nomiclabs/hardhat-vyper": "^3.0.1",
+    "@openzeppelin/hardhat-upgrades": "^1.21.0"
+  },
+  "overrides": {
+    "@openzeppelin/hardhat-upgrades": {
+      "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers"
+    }
   }
 }
