Moved the superfluid callback logic to a separate file. Completed the logic and checks for the afterAgreementCreated callback. Made and modified deployments scripts for the new created file. Created proxy for the text token. Fixed proxy not working on the deploy stream money script.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,11 @@
     "esModuleInterop": true,
     "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "resolveJsonModule": true
   },
   "include": [
+    "./utils",
     "hardhat.config.ts",
     "./scripts",
     "./deploy",
