--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@openzeppelin/contracts-upgradeable": "^4.7.3",
     "@primitivefi/hardhat-dodoc": "^0.1.3",
     "@superfluid-finance/ethereum-contracts": "^1.4.0",
+    "@superfluid-finance/sdk-core": "^0.5.6",
     "@typechain/ethers-v5": "^9.0.0",
     "@typechain/hardhat": "^4.0.0",
     "@types/chai": "^4.3.0",
@@ -83,7 +84,8 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ganache": "^2.0.1",
     "@nomiclabs/hardhat-vyper": "^3.0.1",
-    "@openzeppelin/hardhat-upgrades": "^1.21.0"
+    "@openzeppelin/hardhat-upgrades": "^1.21.0",
+    "@solidstate/contracts": "^0.0.42"
   },
   "overrides": {
     "@openzeppelin/hardhat-upgrades": {
